<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium"
    android:orientation="vertical">

    <EditText
        android:id="@+id/education_edit_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_school"/>

    <EditText
        android:id="@+id/education_edit_major"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_major"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/education_edit_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_date"/>

        <EditText
            android:id="@+id/education_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/end_date"/>

    </LinearLayout>

    <EditText
        android:id="@+id/education_edit_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_courses"/>

</LinearLayout>